<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ /*
  ~ ** Copyright 9/10/2013, raidzero
  ~ **
  ~ ** Licensed under the Apache License, Version 2.0 (the "License");
  ~ ** you may not use this file except in compliance with the License.
  ~ ** You may obtain a copy of the License at
  ~ **
  ~ **     http://www.apache.org/licenses/LICENSE-2.0
  ~ **
  ~ ** Unless required by applicable law or agreed to in writing, software
  ~ ** distributed under the License is distributed on an "AS IS" BASIS,
  ~ ** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ ** See the License for the specific language governing permissions and
  ~ ** limitations under the License.
  ~ *
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<resources>

    <string name="app_name">Androidium</string>
    <string name="action_settings">Androidium Preferences</string>
    <string name="action_android_settings">Android Settings</string>
    <string name="action_manage_apps">Manage Applications</string>
    <string name="action_wallpaper">Wallpaper</string>
    <string name="action_add">Add</string>
    <string name="select_package">Please select a package</string>
    <string name="select_activity">Please select an activity</string>
    <string name="name_shortcut">Please name this shortcut</string>

</resources>
